classDiagram
    class LoanApplicationController {
        -LoanApplicationService service
        +submitApplication(LoanRequest) ResponseEntity
        +getStatus(String applicationId) ResponseEntity
        +getAuditTrail(String applicationId) ResponseEntity
    }

    class LoanApplicationService {
        -AuditTrailAgent agent
        -LoanRepository repository
        +processApplication(LoanApplication) LoanDecision
        +getApplicationStatus(String id) ApplicationStatus
    }

    class LoanApplication {
        -String applicationId
        -String customerId
        -BigDecimal amount
        -String purpose
        -LocalDate applicationDate
        -ApplicationStatus status
    }

    class LoanDecision {
        -String decisionId
        -String applicationId
        -DecisionOutcome outcome
        -String reasoning
        -List~String~ auditEventIds
        -LocalDateTime timestamp
    }

    class DecisionOutcome {
        &lt;&lt;enumeration&gt;&gt;
        APPROVED
        REJECTED
        PENDING_REVIEW
        REQUIRES_ADDITIONAL_INFO
    }

    LoanApplicationController --> LoanApplicationService
    LoanApplicationService --> LoanApplication
    LoanApplicationService --> LoanDecision
    LoanDecision --> DecisionOutcome

